overflow fix

--- a/src/modules/Policies/styles/Policies.module.css
+++ b/src/modules/Policies/styles/Policies.module.css
@@ -61,6 +61,7 @@ h2 {
 
 .filterContainer {
   font-size: 0.75rem;
+  min-width: 4rem;
   display: flex;
   justify-content: flex-start;
   align-items: center;
